FIX alignment and padding of projects cards #works

--- a/css/style-mobile-screen.css
+++ b/css/style-mobile-screen.css
@@ -228,13 +228,14 @@ a {
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr;
   gap: 88px;
-  width: 375px;
+  width: 100%;
   height: 2788px;
   left: 0;
   top: 718px;
   order: 2;
-  row-gap: 50px;
+  row-gap: 20px;
   background-color: #e5e5e5;
+  justify-items: center;
 }
 
 .works-item {
@@ -242,8 +243,7 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 16px;
-  gap: 12px;
+  gap: 5px;
   width: 327px;
   height: 552px;
   background: #fff;
@@ -252,6 +252,10 @@ a {
   flex: none;
   order: 0;
   flex-grow: 0;
+}
+
+.works-item-1 {
+  margin: 90px 0;
 }
 
 .works-item-image-1 {
